Add thermal energy

--- a/p/index.html
+++ b/p/index.html
@@ -44,7 +44,11 @@ $F$ is a constant force, $s$ is the displacement, and the angle $\theta$ is the 
 
 <p>From the formula, the angle $\theta$ determines the "efficiency" of a force. If the force applies directly to the direction of the movement, you can see that the work will be the largest ($\cos0=1$) and the opposite with a force being applied perpendicular to the direction of movement.</p>
 
-<p>Work transfers energy from one place to another, or one form to another: when you push a box, you transfer your energy to move that box. Moreover, work only shows what has been accomplished. If you exert a great force on a wall and it does not move (or break), then no work has been done. This line of thinking will later apply to energy and power.</p>
+<p>Work transfers energy from one place to another, or one form to another: when you push a box, you transfer your energy to move that box. In a closed system with only you and the box, the energy that you lose much have went to the box; in a scientific terms, the change in energy is work:
+<eq>
+    W = \Delta E
+</eq>
+Moreover, work only shows what has been accomplished. If you exert a great force on a wall and it does not move (or break), then no work has been done. This line of thinking will later apply to energy and power.</p>
 
 <p>As an advanced expansion, you can see that work is the area under the <b>force versus displacement</b> graph. If the force is variable, then work is given by:
 <eq>
@@ -102,14 +106,23 @@ $x$ is the length that the material was stretched or compressed.</p>
 
 <p>This equation also tells you that the stiffness of a material matters less compared to how far you can stretch that material. The author is writing this out of spite because he once had an assignment about making a crossbow; he decided to make the string harder, resulting in less energy being created and the bow being a lot weaker. Knowing this could've saved him a two-week spring break contemplating on life, questioning his career choice, and doubting his make-shift ability. It was about a year since, but he still remembers the moment the physics teacher wrote this equation on the board and told the author that the topic was supposed to be learned much later. Lesson: physics and all sciences are interconnected.</p>
 
+<h4>Thermal energy</h4>
+<p>The heat that you feel with touching objects is because the molecules within them are wiggling. Because the molecules are moving, you can consider it a form of kinetic energy; the <i>sum</i> of those little motions is called the thermal energy, and the <i>average</i> is called temperature. A hot object means the molecules in the substance are wiggling faster and storing more energy, increasing the average and the total energy. It is also important to note that thermal energy will transfer from hot to cold object until the <i>temperature</i> is the same.</p>
+
+<p>A quantity to connect between energy and temperature is <b>specific heat capacity</b>, the standard unit is $\frac{J}{kg.K}$. It is the amount of the energy needed to heat a kg of mass to 1 degree of Kelvin. This is a property specific to each material, because just like the kinetic energy $mv^2/2$, the mass of each molecules matters. Combining all of the things above, we have the formula for <b>thermal energy</b>:
+<eq>
+    E_h = m \cdot c \cdot \Delta T
+</eq>
+with $\Delta T$ is the change in temparature.</p>
+
 <h4>Mechanical energy</h4>
-<p>The sum of kinetic energy and potential energy is mechanical energy and it must remain constant without external interaction. If we simply denote mechanical energy as $E$:
+<p>The sum of kinetic energy and potential energy is mechanical energy and it must remain constant without external interaction. In a projectile motion, the energy will convert between the gravitational potential energy and the kinetic energy:
 <eq>
     E
     = E_k + E_g
     = \frac{1}{2}mv^2+mgh
 </eq>
-Moreover, if the system is only under the influence of gravity, then the mechanical energy in the system must remain constant.
+Moreover, if the system is closed, then the mechanical energy in the system must be conserved.
 <eq> E = \text{constant} </eq></p>
 
 <p>That also means that whenever $E_k$ increases, $E_g$ decreases, and vice versa.</p>
@@ -121,8 +134,6 @@ Moreover, if the system is only under the influence of gravity, then the mechani
     = \frac{1}{2}mv^2 + \frac{1}{2}kx^2
     = \text{constant}
 </eq></p>
-
-<p>The <b>mechanical energy conservation law</b> is only true if the moving object is under the influence of gravity and elastic force. If other forces like air resistance, friction, etc... come into play then the mechanical energy will not remain constant. More specifically, those forces will increase the total energy of the entire system.</p>
 
 <h2>Bra–ket Notation</h2>
 <p><h3>Introduction</h3>
