--- a/p/index.html
+++ b/p/index.html
@@ -134,6 +134,9 @@ Moreover, if the system is closed, then the mechanical energy in the system must
     = \frac{1}{2}mv^2 + \frac{1}{2}kx^2
     = \text{constant}
 </eq></p>
+<figure comic>
+    <img src="1.png">
+</figure>
 
 <h2>Bra–ket Notation</h2>
 <p><h3>Introduction</h3>
