Adjust image height

--- a/a/index.html
+++ b/a/index.html
@@ -376,7 +376,7 @@ In the last step, we know that $e^x$ grows much more rapidly than $2$.</p>
         {\Delta x}
 </eq>
 <figure>
-    <img src="10.png" alt="Two points approaching each other, courtesy of Math is Fun">
+    <img src="10.png" style="max-height: 15rem;" alt="Two points approaching each other">
     <figcaption>Two points approaching each other</figcaption>
 </figure>
 
@@ -460,7 +460,7 @@ This means the limit of a quotient of two functions equals the limit of the quot
 <!-- Maybe someday change f(x) to y and df to dy. I won't change it right now because that means redrawing figure m11. -->
 <p>Assume we have two functions: $g(x)$ and $h(x)$, and $f(x)=h\cdot g$. Because it is the multiplication between two functions, you can think of $f(x)$ as the area of a rectangle with $h(x)$ and $g(x)$ as two sides, similar to <a href="#fig-a11"></a>.
 <figure>
-    <img src="11.png" alt="Representation of a product between two functions">
+    <img src="11.png" style="max-height: 15rem;" alt="Representation of a product between two functions">
     <figcaption>Representation of a product between two functions</figcaption>
 </figure>
 </p>
