Little loading animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Publication <time></time>
         </p>
     </header>
-    <main>
+    <main class="loading">
         <h2 noNumber>About This Note</h2>
         <p>This Note is constructed into multiple parts, each based on the content of a big subject or field. In each part are topics that were sorted in ascending difficulty based on Luke's personal experience, not necessarily based on the actual comprehension difficulty.</p>
 
