--- a/a/index.html
+++ b/a/index.html
@@ -548,7 +548,7 @@ If you think of  $dg/dh$ as "derivative of $g$ when plugging in $h$", another in
 </eq></p>
 
 <h3>Additional material</h3>
-<p>It is recommended that you explore chapter <a href="#sec-a-integral"></a> for the <i>inverse</i> concept of derivative: anti-derivative. For other additional reading material connecting to calculus as a whole, place look at the additional material section at <a href="#sec-a-integral-material"></a>.</p>
+<p>It is recommended that you explore <a href="#sec-a-integral"></a> for the <i>inverse</i> concept of derivative: anti-derivative. For other additional reading material connecting to calculus as a whole, place look at <a href="#sec-a-integral-material"></a>.</p>
 
 <h2 id="sec-a-integral">Integrals</h2>
 <p>It is an absolute requirement that the reader understands derivatives, which in turn requires the knowledge of limits.</p>
