--- a/p/index.html
+++ b/p/index.html
@@ -44,7 +44,7 @@ $F$ is a constant force, $s$ is the displacement, and the angle $\theta$ is the 
 
 <p>From the formula, the angle $\theta$ determines the "efficiency" of a force. If the force applies directly to the direction of the movement, you can see that the work will be the largest ($\cos0=1$) and the opposite with a force being applied perpendicular to the direction of movement.</p>
 
-<p>Work transfers energy from one place to another, or one form to another: when you push a box, you transfer your energy to move that box. In a closed system with only you and the box, the energy that you lose much have went to the box; in a scientific terms, the change in energy is work:
+<p>Work transfers energy from one place to another, or one form to another: when you push a box, you transfer your energy to move that box. In a closed system with only you and the box, the energy that you lose must have went to the box; in a scientific terms, the change in energy is work:
 <eq>
     W = \Delta E
 </eq>
