--- a/m/index.html
+++ b/m/index.html
@@ -246,7 +246,7 @@ A good way to think of the exponent $n$ is in terms of how you move the decimal 
 \end{aligned}\]</p>
 
 <h2>Complex Numbers</h2>
-<p><h3>Introduction</h3>
+<h3>Introduction</h3>
 <p>The definition of a <b>complex number</b>:
 <eq> i = \sqrt{-1} </eq>
 <eq id="eq-m1">
