--- a/p/index.html
+++ b/p/index.html
@@ -139,7 +139,7 @@ Moreover, if the system is closed, then the mechanical energy in the system must
 </figure>
 
 <h2>Bra–ket Notation</h2>
-<p><h3>Introduction</h3>
+<h3>Introduction</h3>
 <p>The bra–ket notation provides a separation from the term “vector” that is used for quantities like displacement or velocity — these vectors tend to be related to the three dimensions of space. In quantum mechanics, a “state” is more complex and involves more abstract multi- or infinite-dimensional vector space (that is, it has multiple axes instead of x, y, and z). At an elementary level, the bra–ket notation is just another way of denoting an arrow over a label for vectors.</p>
 
 <p>In quantum physics, ket is a version of vector to store organized data of multiple spaces, hence it is hard to imagine a multi-dimensional vector; think of it as multiple knobs on an airplane where only certain combinations will make the plane move. Throughout this chapter, "vector" and "ket" are used interchangeably.</p>
