--- a/m/index.html
+++ b/m/index.html
@@ -258,12 +258,11 @@ We define the real part of $z$ as $Re(z)=a$ and the imagined part $Im(z)=b$. Fur
 Because $b=0$ for real numbers, the conjugate of a real number is itself.</p>
 
 <h3>Visual intuition</h3>
-<p>
 <figure>
     <img src="9.png" alt="Complex number intuition">
     <figcaption>Complex number intuition</figcaption>
 </figure>
-As a way to draw it on a standard two-axis graph similar to <a href="#fig-m9"></a>, you can put the horizontal axis (x-axis) as $a$ and the vertical axis as $b$ to represent the imaginary part of a complex number. This works better if you also recall that we were taught real numbers on a left-right number line.</p>
+<p>As a way to draw it on a standard two-axis graph similar to <a href="#fig-m9"></a>, you can put the horizontal axis (x-axis) as $a$ and the vertical axis as $b$ to represent the imaginary part of a complex number. This works better if you also recall that we were taught real numbers on a left-right number line.</p>
 
 <p>With this intuition, a number will have a certain "distance" away from the origin. When finding the conjugate of a complex number, you are essentially flipping the vertical axis. If you pay close attention to <a href="#eq-m1"></a>, you can see that it closely resembles the standard graph form $y=mx+b$.</p>
 
