Use external letterhead

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke's n-week-project</title>
-    <link rel="shortcut icon" href="letterhead.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://lukenk.github.io/print/letterhead.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div>
-            <img src="letterhead.svg" alt="">
+            <img src="https://lukenk.github.io/print/letterhead.svg" alt="">
             <p class="med">
                 LukeNK
             </p>
