No need to move between MD and HTML

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ chapters:
 {% endcomment %}
 
 {% for subject in page.chapters %}
-# {{ subject[0] | capitalize }}
+<h1>{{ subject[0] | capitalize }}</h1>
     {% for chapter in subject[1] %}
         {% assign sub = subject[0] | slice: 0, 1 %}
-        {% assign path = "_" |  append: sub | append: "/"  %}
+        {% assign path = "_" | append: sub | append: "/"  %}
         {% assign path = path | append: chapter | append: ".md" %}
     {% capture text %}
 {% include_relative {{ path }} %}
     {% endcapture %}
-    {{ text | split: "---" | last }}
+    {{ text | split: "---" | last | markdownify }}
     {% endfor %}
 {% endfor%}
