--- a/index.html
+++ b/index.html
@@ -65,14 +65,13 @@ chapters:
     {% for subject in page.chapters %}
         <h1>{{ subject[0] | capitalize }}</h1>
         {% for chapter in subject[1] %}
-            {% assign sub = subject[0] | slice: 0, 1 %}
-            {% assign path = "_" | append: sub | append: "/"  %}
-            {% assign path = path | append: chapter | append: ".md" %}
-        {% capture text %}
-{% include_relative {{ path }} %}
-        {% endcapture %}
-        {{ text | split: "---" | last | markdownify }}
+            <div id="{{ chapter }}" class="chapter">
+                {% assign sub = subject[0] | slice: 0, 1 %}
+                {% assign path = "_" | append: sub | append: "/"  %}
+                {% assign path = path | append: chapter | append: ".md" %}
+                {% capture text %}{% include_relative {{ path }} %}{% endcapture %}
+                {{ text | split: "---" | last | markdownify }}
+            </div>
         {% endfor %}
     {% endfor%}
-
 </main>
