--- a/index.html
+++ b/index.html
@@ -1,24 +1,5 @@
 ---
 layout: base
-chapters:
-    math:
-        - logic-proof
-        - set
-        - sigfig
-        - imaginary-number
-        - permutation-combination
-        - limit
-        - derivative
-        - integral
-    chemistry:
-        - useful
-        - stoichiometry
-        - electron-config
-    physics:
-        - mecanical-fwpe
-        - braket
-        - qubit
-        - entangle
 ---
 <header>
     <div>
@@ -62,16 +43,15 @@ chapters:
         https://stackoverflow.com/questions/71475643/include-another-page-with-jekyll-without-displaying-front-matter
     {% endcomment %}
 
-    {% for subject in page.chapters %}
-        <h1>{{ subject[0] | capitalize }}</h1>
-        {% for chapter in subject[1] %}
-            <div id="{{ chapter }}" class="chapter">
-                {% assign sub = subject[0] | slice: 0, 1 %}
-                {% assign path = "_" | append: sub | append: "/"  %}
-                {% assign path = path | append: chapter | append: ".md" %}
-                {% capture text %}{% include_relative {{ path }} %}{% endcapture %}
-                {{ text | split: "---" | last | markdownify }}
+    {% for collection in site.collections %}
+        {% if collection.label == "posts" %}
+            {% continue %}
+        {% endif %}
+        <h1>{{ collection.name }}</h1>
+        {% for page in collection.docs %}
+            <div class="chapter" id="">
+                {{ page.content | markdownify }}
             </div>
         {% endfor %}
-    {% endfor%}
+    {% endfor %}
 </main>
