--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@ layout: base
 
     <p>A lot of times, the topics are cross-disciplined and are useful in multiple fields, making sorting them into one particular part difficult. If that is the case, the topic will be put in a Part that is the most popular to be associated with that topic, then other cross-disciplined fields will be indicated in a bracket on the title of that topic. Therefore, if you did not find a topic you want to see in a part, maybe other parts will contain the concept you want to understand.</p>
 
-    <p>An explanation of the reason why the parts were ordered the way it is: the author believed that math is the foundation of sciences, so it was put in the beginning. Biology will be followed after it because it is the science that is (mostly) visible to human application — it is the first machine being built based on the other science. At a lower level, chemistry will explain the interaction between substances that make up the organs and show how to build those living machines. Physics was put last but not least because physics itself describes the rules that others must follow. The order itself is less of something academic but more of the personal belief of the author.</p>
-
     <p>The Note of Science Topics by Luke NK is free and unlicensed. The author simply suggests the astute reader share this with anybody who needs a different perspective to look at the topics. Knowledge is best used when everybody knows it.</p>
 
     <nav>
@@ -49,7 +47,8 @@ layout: base
         {% endif %}
         <h1>{{ collection.name }}</h1>
         {% for page in collection.docs %}
-            <div class="chapter" id="">
+            {% assign id = page.url | split: "/" | last | split: "." | first %}
+            <div class="chapter" id="{{ id }}">
                 {{ page.content | markdownify }}
             </div>
         {% endfor %}
